After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763912 - pad/utils: missing annotation for gst_pad_get_current_caps and gst_pad_peer_query_caps
pad/utils: missing annotation for gst_pad_get_current_caps and gst_pad_peer_q...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other All
: Normal minor
: 1.6.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
1.6.4
Depends on:
Blocks:
 
 
Reported: 2016-03-19 12:09 UTC by Aurélien Zanelli
Modified: 2016-04-14 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pad: add 'transfer full' and 'nullable' annotations to gst_pad_get_current_caps (1.07 KB, patch)
2016-03-19 12:10 UTC, Aurélien Zanelli
committed Details | Review
utils: add 'transfer full' annotation to gst_pad_peer_query_caps (1.14 KB, patch)
2016-03-19 12:11 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2016-03-19 12:09:24 UTC
These functions returns an incremented refcounted caps and gst_pad_get_current_caps can returns NULL.
Comment 1 Aurélien Zanelli 2016-03-19 12:10:51 UTC
Created attachment 324331 [details] [review]
pad: add 'transfer full' and 'nullable' annotations to gst_pad_get_current_caps
Comment 2 Aurélien Zanelli 2016-03-19 12:11:28 UTC
Created attachment 324332 [details] [review]
utils: add 'transfer full' annotation to gst_pad_peer_query_caps
Comment 3 Sebastian Dröge (slomo) 2016-03-20 09:51:07 UTC
Comment on attachment 324332 [details] [review]
utils: add 'transfer full' annotation to gst_pad_peer_query_caps

This can also return NULL, no? But transfer full is already better than nothing ;)
Comment 4 Aurélien Zanelli 2016-03-20 10:29:44 UTC
(In reply to Sebastian Dröge (slomo) from comment #3)
> Comment on attachment 324332 [details] [review] [review]
> utils: add 'transfer full' annotation to gst_pad_peer_query_caps
> 
> This can also return NULL, no? But transfer full is already better than
> nothing ;)

It can only returns NULL for programming errors (g_return_val_if_fail).
Do you think we should annotate with 'nullable' for these cases ?
Comment 5 Sebastian Dröge (slomo) 2016-03-20 21:38:21 UTC
No, I thought it also returns NULL if the pad has no peer.
Comment 6 Sebastian Dröge (slomo) 2016-03-21 08:26:10 UTC
Attachment 324331 [details] pushed as b7cffa4 - pad: add 'transfer full' and 'nullable' annotations to gst_pad_get_current_caps
Attachment 324332 [details] pushed as 94036e8 - utils: add 'transfer full' annotation to gst_pad_peer_query_caps