pad: add 'transfer full' and 'nullable' annotations to gst_pad_get_current_caps

and also change the description accordingly since function returns an
incremented caps object or NULL if there is no caps set.

https://bugzilla.gnome.org/show_bug.cgi?id=763912